stage 2 fix code